--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,6 @@ license = "MIT"
 
 [dependencies]
 avian2d = "0.1.2"
-bevy = { version = "0.14", default-features = false, features = [
-	"bevy_core_pipeline",
-	"bevy_state",
-	"bevy_text",
-	"bevy_ui",
-	"bevy_asset",
-	"bevy_render",
-	"bevy_sprite",
-] }
+bevy = "0.14"
 rand = "0.8.5"
 serde_json = "1.0"
